@@ -2,3 +2,4 @@ require_relative "commands/excel_to_x"
 require_relative "commands/excel_to_ruby"
 require_relative "commands/excel_to_c"
 require_relative "commands/excel_to_test"
+require_relative "commands/common_command_line_options"
