@@ -4,6 +4,8 @@
 - Fix bug in keeping of table references when setting to keep all named references
 - Experiment with ways of making it easier to wrap the C output in a command line interface
 - Added the NOT(true) function in ruby, and C
+- Update dependencies
+- Refactor common command line options
 
 # 0.3.17 - 2015 May 14
 
